[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes_and_Scripts/GameObjects/Actors/Actor.tscn" type="PackedScene" id=1]
<<<<<<< Updated upstream
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0003.png" type="Texture" id=2]
[ext_resource path="res://Scenes_and_Scripts/GameObjects/Actors/Boss.gd" type="Script" id=3]
[ext_resource path="res://Assets/Art/Sounds/Cube_Imapct_Normal.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0000.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0004.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0003.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0005.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0006.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0001.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0002.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/Images/DiceBossAnimation/dice_boss_roll_0007.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0002.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0001.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0005.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0006.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0004.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0000.png" type="Texture" id=18]
[ext_resource path="res://Assets/Art/Images/Particles/dice_boss_dust_0007.png" type="Texture" id=19]
=======
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0003.png" type="Texture" id=2]
[ext_resource path="res://Scenes_and_Scripts/GameObjects/Actors/Boss.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/Cube_Imapct_Normal.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0000.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0004.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0003.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0005.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0006.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0001.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0002.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/Images/Images/DiceBossAnimation/dice_boss_roll_0007.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0002.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0001.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0005.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0006.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0004.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0000.png" type="Texture" id=18]
[ext_resource path="res://Assets/Art/Images/Images/Particles/dice_boss_dust_0007.png" type="Texture" id=19]
>>>>>>> Stashed changes

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 13 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ) ],
"loop": true,
"name": "Spin",
"speed": 80.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ) ],
"loop": false,
"name": "Roll",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 19 ) ],
"loop": false,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRoot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Roll"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRoot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -25 ) ]
}

[node name="Boss" instance=ExtResource( 1 )]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 5 )

[node name="DiceAnimationSprite" type="AnimatedSprite" parent="SpriteRoot" index="0"]
scale = Vector2( 0.04, 0.04 )
frames = SubResource( 1 )
<<<<<<< Updated upstream
animation = "Spin"
=======
animation = "Roll"
>>>>>>> Stashed changes

[node name="ParticlesAnimation" type="AnimatedSprite" parent="SpriteRoot" index="1"]
scale = Vector2( 0.04, 0.04 )
frames = SubResource( 4 )

[node name="TurnClock" type="Timer" parent="." index="2"]
wait_time = 3.0
autostart = true

[node name="Control" type="CenterContainer" parent="." index="3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="Control" index="0"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 196.0
margin_top = 193.0
margin_right = 204.0
margin_bottom = 207.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "4"
align = 1
valign = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/RESET = SubResource( 2 )
anims/Roll = SubResource( 3 )

<<<<<<< Updated upstream
=======
[node name="Tween" type="Tween" parent="." index="6"]

>>>>>>> Stashed changes
[connection signal="animation_finished" from="SpriteRoot/DiceAnimationSprite" to="." method="_on_DiceAnimationSprite_animation_finished"]
[connection signal="animation_finished" from="SpriteRoot/ParticlesAnimation" to="." method="_on_ParticlesAnimation_animation_finished"]
[connection signal="timeout" from="TurnClock" to="." method="_on_TurnClock_timeout"]
